--- a/index.html
+++ b/index.html
@@ -92,7 +92,25 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
         <h2 class="mb-5">Unidad 2</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+        <h3 >1.1 fundamentos de la ingeniría en software</h3>
+        <h3 >definiciones y objetivos de la ingeniería de sofware</h3>
+        <h4>Definición</h4>
+        <p>La ingeniería de software es una aplicación práctica del conocimiento científico para proveer metodologías y técnicas que ayuden a desarrollar sistemas de software a tiempo, y a su vez que aseguren que el desarrollador cumpla con las expectativas de calidad y permanezca dentro del presupuesto.
+        <h4>Objetivos</h4>> 
+        <p>Diseñar programas informáticos que se adecúen a las exigencias de la sociedad.</p>  
+        <p>Liderar y acoplar el desarrollo de programaciones complicadas.</p>  
+        <p>Actuar en todas las fases del ciclo de vida de un producto.</p>  
+        <p>Computar los costos de un proyecto y evaluar los tiempos de desarrollo.</p>  
+        <p>Realizar el seguimiento de costes y plazos. </p>  
+        <p>Liderar equipos de trabajo de desarrollo software.</p>  
+        <p>Estructurar la elaboración de evidencias que comprueben el perfecto funcionamiento de los programas y que se adaptan a los requerimientos de análisis y diseño.</p>  
+        <p>Diseñar, construir y administrar bases de datos.</p>  
+        <p>Liderar y orientar a los programadores durante el desarrollo de aplicaciones.</p>  
+        <p>Incluir  procesos de calidad en los sistemas, calculando métricas e indicadores y chequeando la calidad del software producido.</p>  
+        
+
+          <h3 >la evolución del software</h3>
+        </p></p>>
         <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
       </div>
     </section>
