--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
       <div class="w-100">
         <h2 class="mb-5">Unidad 2</h2>
         <h3 >1.1 fundamentos de la ingeniría en software</h3>
-        <h3 >definiciones y objetivos de la ingeniería de sofware</h3>
+        <h3 >Þ definiciones y objetivos de la ingeniería de sofware</h3>
         <h4>Definición</h4>
         <p>La ingeniería de software es una aplicación práctica del conocimiento científico para proveer metodologías y técnicas que ayuden a desarrollar sistemas de software a tiempo, y a su vez que aseguren que el desarrollador cumpla con las expectativas de calidad y permanezca dentro del presupuesto.
-        <h4>Objetivos</h4>> 
+        <h4>Objetivos</h4> 
         <p>Diseñar programas informáticos que se adecúen a las exigencias de la sociedad.</p>  
         <p>Liderar y acoplar el desarrollo de programaciones complicadas.</p>  
         <p>Actuar en todas las fases del ciclo de vida de un producto.</p>  
@@ -108,9 +108,27 @@
         <p>Liderar y orientar a los programadores durante el desarrollo de aplicaciones.</p>  
         <p>Incluir  procesos de calidad en los sistemas, calculando métricas e indicadores y chequeando la calidad del software producido.</p>  
         
-
-          <h3 >la evolución del software</h3>
-        </p></p>>
+<div class="resume-content">
+          <h3 >Þ la evolución del software</h3>
+        </p>El término “evolución” del software se utiliza desde los sesenta para denominar la dinámica de crecimiento del software.</p>
+      </p>Una definición atribuida a Lehman y Ramil dice que la evolución del software es “todas las actividades de programación que se orientan a generar una nueva versión de un software a partir de una versión anterior operativa.</p>
+    </p>Ned Chapin 1(1999) lo definió como “la aplicación de las actividades y procesos de mantenimiento del software que generan una nueva versión operative de un software con una funcionalidad de usuario o propiedades cambiadas a partir de una versión anterior […] junto con los procesos y actividades de garantía de calidad y con la gestión de esos procesos”. De estas definiciones se desprende que la evolución cubre el ajuste a funcionalidades adicionales.</p>
+  </p>La guía SWEBOK2 considera que la causa del mantenimiento está tanto en la necesidad de “cambios” como de “evolución” en el software.</p>
+</div>
+<div class="resume-content">
+<h3>la crisis del software</h3>
+  <h4>¿Cómo se define crisis?</h4>
+  <p>La palabra crisis se define en el diccionario como "un punto decisivo en el curso de algo; momento, etapa, o evento decisivo o crucial". Sin embargo para el software no ha habido ningún punto crucial, sólo una lenta evolución.</p>
+  <p>La crisis en la industria del software permanece durante muchos años, lo cual parece una contradicción para el término. Lo que si se podría decir es que hay un problema crónico en el desarrollo de software.</p>
+ <h4>¿Por qué se crea la IS?</h4>
+  <p>La ingeniería de software se crea debido a las siguientes características.</p>
+  <p>El producto debe ser confiable y realizar sólo las tareas especificadas en los requerimientos.</p>
+  <p>El producto debe ser robusto. Esto quiere decir que el software se comporta de manera razonable, incluso en circunstancias no anticipadas desde el principio.</p>
+  <p>El producto de software debe ser lo más reutilizable posible, de manera tal que pueda ser incorporado en otro producto de software si se requiere.</p>
+  <p>El producto de software debe ser eficiente en el uso de los recursos del sistema.</p>
+  <p>Se requiere desarrollar el software en una manera que lo haga evolutivo, de forma tal que se pueda agregar funcionalidad adicional sin efectos perjudiciales.</p>
+  <p>El producto de software debe ser utilizable, es decir, el aprendizaje de su uso debe ser los suficientemente sencillo por parte de personas no especialistas.</p>
+</div>
         <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
       </div>
     </section>
