--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="subheading mb-5">Correo Institucional:
           <a href="kenny.caicedob@ug.edu.ec">kenny.caicedob@ug.edu.ec</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">A continuación se muestran las clases vistas en Introducción a la Ingeniería en Software correspondientes a la UNIDAD 1 - 2</p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-github"></i>
@@ -81,7 +81,7 @@
       <div class="w-100">
         <h2 class="mb-5">Unidad 1</h2>
         <h3 >1.1 fundamentos de la ingeniría en software</h3>
-        <h3 >Þ definiciones y objetivos de la ingeniería de sofware</h3>
+        <h3 >·  definiciones y objetivos de la ingeniería de sofware</h3>
         <h4>Definición</h4>
         <p>La ingeniería de software es una aplicación práctica del conocimiento científico para proveer metodologías y técnicas que ayuden a desarrollar sistemas de software a tiempo, y a su vez que aseguren que el desarrollador cumpla con las expectativas de calidad y permanezca dentro del presupuesto.
         <h4>Objetivos</h4> 
@@ -118,7 +118,7 @@
   <p>El producto de software debe ser utilizable, es decir, el aprendizaje de su uso debe ser los suficientemente sencillo por parte de personas no especialistas.</p>
 </div>
 <div class="resume-content">
-<h3>El software en la actualidad</h3>
+<h3>·  El software en la actualidad</h3>
 <p>Las direcciones en las que evoluciona la ingeniería del software hoy en día pueden agruparse de la siguiente manera:</p>
 <h4>Metodologías ágiles:</h4>
 <p>Métodos de desarrollo de software basados en procesos iterativos e incrementales, donde los requisitos y soluciones evolucionan durante la colaboración.Metodologías como Scrum (1995), Extreme Programming (1999) o DSDM (1995) fueron evolucionando hasta que en Febrero del 2001 se publicó “Manifesto for Agile Software Development” para definir la aproximación ahora conocida como metodologías ágiles.</p>
@@ -129,6 +129,8 @@
 <h4>Líneas de productos software:</h4>
 <p>En lugar de productos individuales.</p>
 </div>
+<div class="w-100">
+<h3 > class="mb-2" 1.1 fundamentos de la ingeniría en software</h3>
 
       </div>
     </section>
