--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <p>En lugar de productos individuales.</p>
 </div>
 <div class="w-100">
-<h3 > class="mb-2" 1.1 fundamentos de la ingeniría en software</h3>
+<h3  class="mb-2"> 1.1 fundamentos de la ingeniría en software</h3>
 
       </div>
     </section>
