--- a/index.html
+++ b/index.html
@@ -129,10 +129,47 @@
 <h4>Líneas de productos software:</h4>
 <p>En lugar de productos individuales.</p>
 </div>
-<div class="w-100">
-<h3  class="mb-2"> 1.1 fundamentos de la ingeniría en software</h3>
+<h3  class="mb-5"> 1.2 PROCESO de la ingeniría en software</h3>
+<h3>·  Factores de calidad del software </h3>
+<h4>Concepto de Calidad:</h4>
+<p>Conjunto de propiedades y de características de un producto o servicio, que le confieren aptitud para satisfacer una necesidad explícita o implícita (ISO 8402).</p>
+<h4>Calidad del Software: </h4>    
+<p>Es el grado con el que un sistema, componente o proceso cumple los requerimientos especificados y las necesidades o expectativas del cliente o usuario.</p>
+<p>Factores que determinan la calidad del software pueden clasificar en dos grandes grupos (Pressman):</p>
+<h4>Medidas Directas:</h4>    
+<p>La medida o medición decimos que es directa, cuando disponemos de un instrumento de medida que nos muestra un resultado (generalmente numérico).</p>
+<h4>Medidas Indirectas: </h4>    
+<p>Cuando hablamos de sistemas informáticos no siempre es posible realizar una medida directa, porque no disponemos del instrumento adecuado que nos permita realizar esa medición</p>
+<h3>·  Problemas en el desarrollo de software</h3>
+<h4>¿Qué es un proyecto software?</h4>
+<p>Haciendo uso de la definición de proyecto de la guía del PMBOK, y adaptándola a un proyecto software, podríamos definirlo como: </p>
+<p>“Un proyecto software es un esfuerzo temporal que se lleva a cabo para crear un producto software, servicio TI o resultado único.” </p>
+<h4>¿Pero que es el software?</h4>
+<p>Según la definición del IEEE, "software es la suma total de los programas de ordenador, procedimientos, reglas, la documentación asociada y los datos que pertenecen a un sistema de cómputo", y "un producto de software es un producto diseñado para un usuario". </p>
+<h4>El software puede dividirse en dos grandes categorías: </h4>
+<h4>Software de aplicaciones:</h4>
+<p>Se usan para proveer servicios a clientes y ejecutar negocios de forma más eficiente. El software de aplicaciones puede ser un sistema pequeño o uno grande integrado. Como ejemplos de este tipo de software estarían un sistema de cuentas, un sistema de planificación de recursos.</p>
+<h4>Software de sistemas:</h4>
+<p>El software de sistemas se usa para operar y mantener un sistema informático. Permite a los usuarios usar los recursos del ordenador directamente y a través de otro software. Algunos ejemplos de este tipo de software son los sistemas operativos, compiladores y otras utilidades del sistema.</p>
+<h3>·  la ingeniería del software</h3>
+<p>Los proyectos software tienen características específicas que los hacen diferentes de otros proyectos de ingeniería.</p>
+<p>La Ingeniería del Software es la rama de la ingeniería que crea y mantiene las aplicaciones de software usando tecnologías y prácticas de las ciencias de la computación, manejo de proyectos, ingeniería, el ámbito de la aplicación, y otros campos.</p>
+<p>El software se desarrolla, no se fabrica en el sentido clásico de la palabra. Ambas actividades se dirigen a la construcción de un "producto", pero los métodos son diferentes. Los costes del software se encuentran en la ingeniería, esto implica que los proyectos no se pueden gestionar como si lo fueran de fabricación. </p>
+<p>La juventud de la ingeniería del software con respecto a otras ingenierías, la mayoría del software se construye a medida, en vez de ensamblar componentes previamente creados. Aunque ya se están dando importantes pasos en esta dirección, que facilitaría en gran medida el desarrollo de aplicaciones informáticas. </p>
+<p>En el software, el recurso principal son las personas. No es siempre posible acelerar la construcción de software añadiendo personas porque la construcción de software requiere un esfuerzo en equipo. El equipo tiene que trabajar de forma coordinada y compartir un objetivo de proyecto común. Se necesita comunicación efectiva dentro del equipo. </p>
+<p>El software no se estropea, pero se deteriora. Durante su vida, el software sufre cambios (mantenimiento). Conforme se hacen los cambios, es bastante probable que se introduzcan nuevos defectos, lo que hace que el software se vaya deteriorando debido a estos cambios. </p>
+<h3>·  Visión general del proceso de ingeniería del software</h3>
+<h5>Con independencia del área, tamaño o complejidad del proyecto, cualquier proyecto se encontrará al menos en una de las siguientes fases:</h5>
+<p>-Definición ~ Análisis (del sistema, del sw).</p>
+<p>-Desarrollo ~ Diseño, codificación, prueba.</p>
+<p>-Mantenimiento.</p>
+<h3>·  Responsabilidad ética y profesional en ingeniería del software</h3>
+<p>La IS se realiza dentro de un marco social y legal que limita la libertad de la gente que trabaja en dicha área.</p>
+<h4>Los ingenieros de software: </h4>
+<p>Deben aceptar que su labor implica responsabilidades mayores que la simple aplicación de habilidades técnicas.</p>
+<p>Deben comportarse de forma ética y moralmente responsable para ser respetado como un ingeniero profesional.</p>
 
-      </div>
+</div>
     </section>
 
     </section>
