--- a/index.html
+++ b/index.html
@@ -168,6 +168,25 @@
 <h4>Los ingenieros de software: </h4>
 <p>Deben aceptar que su labor implica responsabilidades mayores que la simple aplicación de habilidades técnicas.</p>
 <p>Deben comportarse de forma ética y moralmente responsable para ser respetado como un ingeniero profesional.</p>
+<h3 class="mb-5">1.3 Sistemas de información</h3>
+<h3>·  Concepto</h3>
+<p>Un sistema de información es un conjunto de elementos interrelacionados con el propósito de prestar atención a las demandas de información de una organización, para elevar el nivel de conocimientos que permitan un mejor apoyo a la toma de decisiones y desarrollo de acciones (Peña, 2006).</p>
+<p>Conjunto de elementos que interactúan entre sí con el fin de apoyar las actividades de una empresa o negocio. Teniendo muy en cuenta el equipo computacional necesario para que el sistema de información pueda operar y el recurso humano que interactúa con el Sistema de Información, el cual está formado por las personas que utilizan el sistema.</p>
+<p>Un sistema de información realiza cuatro actividades básicas: entrada, almacenamiento, procesamiento y salida de información (Peralta, 2008).</p>
+<h3>·  información y datos</h3>
+<p>Entrada de Información: Es el proceso mediante el cual el Sistema de Información toma los datos que requiere para procesar la información.
+  Almacenamiento de información: El almacenamiento es una de las actividades o capacidades más importantes que tiene una computadora, ya que a través de esta propiedad el sistema puede recordar la información guardada en la sección o proceso anterior.
+  Procesamiento de Información: Es la capacidad del Sistema de Información para efectuar cálculos de acuerdo con una secuencia de operaciones preestablecida. 
+Salida de Información: La salida es la capacidad de un Sistema de Información para sacar la información procesada o bien datos de entrada al exterior. 
+</p>
+<h3>·  tipos de sistemas de información</h3>
+<p>Sistemas transaccionales: Son Sistemas de Información que logran la automatización de procesos operativos dentro de una organización ya que su función primordial consiste en procesar transacciones tales como pagos, cobros, entradas, salidas, etc.</p>
+<p>Sistemas de Soporte a la Toma de Decisiones, Sistemas para la Toma de Decisión de Grupo, Sistemas Expertos de Soporte a la Toma de Decisiones y Sistema de Información para Ejecutivos: Son Sistemas de Información que apoyan el proceso de toma de decisiones.</p>
+<p>Sistemas Estratégicos: Son sistemas de información desarrollado en las organizaciones con el fin de lograr ventajas competitivas, a través del uso de la tecnología de información.</p>
+<p>Manuales: cuando el hombre auxiliado por cierto equipo (máquinas de escribir, sumadoras, archivos, etc.) realiza las principales funciones de recopilación, registro, almacenamiento, cálculo y generación de información.</p>
+<p>Mecanizadas: cuando cierta maquinaria realiza las principales funciones de procesamiento. Para los sistemas mecanizados que hacen uso de un computador, de acuerdo al tipo de interacción Hombre-Máquina, los sistemas de información pueden ser de dos tipos (Batch y en Línea]</p>
+<p>Procesos centralizados: los recursos se encuentran ubicados en un área física determinada, por lo que su acceso se realiza en las misma instalación o desde lugares retirados, mediante líneas de comunicación de datos (telefónicas, microondas, satélite, etc.).</p>
+<p>Proceso distribuido: los recursos se encuentran diseminados en diversos lugares de una zona territorial (ciudad, país, continente, etc.), por lo que el procesamiento se realiza en el propio lugar donde se originan los datos, existiendo la posibilidad de compartir información entre las diversas instalaciones, mediante la información de una “Red de Comunicación”.</p>
 
 </div>
     </section>
@@ -179,9 +198,147 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
         <h2 class="mb-5">Unidad 2</h2>
+       <h3>2.1 Proceso del software</h3>
+       <h3>·  definición de proceso de software</h3>
+       <p>Un conjunto estructurado de actividades necesarias para desarrollar un sistema de software.</p>
+       <p>Muchos de los procesos de software son diferentes, pero todos implican:      </p>
+       <p>-Especificación</p>
+       <p>-Diseño e implementación      </p>
+       <p>-Validación</p>
+       <p>-Evolución</p>
+       <h4>Cualquier proceso tiene las siguientes características:
+      </h4>
+       <p>El proceso establece todas las actividades principales
+      </p>
+       <p>El proceso utiliza recursos, está sujeto a una serie de restricciones y genera productos intermedios y finales
+      </p>
+       <p>El proceso puede estar compuesto de subprocesos que se encadenan de alguna manera. Puede definirse como una jerarquía de procesos organizada de modo que cada subproceso tenga su propio modelo de proceso
+      </p>
+       <p>Cada actividad del proceso tiene criterios de entrada y de salida, de modo que se conoce cuándo comienza y cuándo termina una actividad
+      </p>
+       <p>Las actividades se organizan en secuencia de modo que resulta claro cuando una actividad se realiza en orden relativo a otras actividades
+      </p>
+       <p>Todo proceso tiene un conjunto de principios orientadores que explican las metas de cada actividad
+      </p>
+       <p>Las restricciones o controles pueden aplicarse a una actividad, recurso o producto
+      </p>
        
-        
-      </div>
+
+
+       <h3>·  Estándares relacionados con el proceso de SW </h3>
+       <h4>Estándar ISO/IEC/IEEE 12207:2017      </h4>
+       <p>El estándar ISO/IEC/IEEE 12207:2017 [ISO/IEC/IEEE, 2017] relativo a los procesos del ciclo de vida del software
+      </p>
+       <p>Se aplica a la adquisición de sistemas de software , productos y servicios, al suministro, desarrollo, operación, mantenimiento y eliminación de productos de software o componentes de software de cualquier sistema, ya sea que se realice interna o externamente a una organización.
+      </p>
+       <p>Se incluyen aquellos aspectos de la definición del sistema necesarios para proporcionar el contexto de los productos y servicios de software
+      </p>
+       <p>También proporciona procesos que pueden emplearse para definir, controlar y mejorar los procesos del ciclo de vida del software dentro de una organización o de un proyecto
+      </p>
+       <p>Esta norma no fomenta o especifica ningún modelo concreto de ciclo de vida, gestión del software o método de ingeniería, ni prescribe cómo realizar ninguna de las actividades
+      </p>
+   
+
+
+<h3 class="mb-5">2.2 el ciclo de vida del software</h3>
+       <h3>·  definición y etapas</h3>
+       <p>Desde un punto de vista general puede considerarse que el ciclo de vida de un software tiene tres etapas claramente diferenciadas:
+      </p>
+<h4>Planificación: </h4>
+<p>Idearemos un planeamiento detallado que guíe la gestión del proyecto, temporal y económicamente.
+</p>
+<h4>Implementación: </h4>
+<p>Acordaremos el conjunto de actividades que componen la realización del producto.</p>
+<h4>Puesta en producción: </h4>
+<p>Nuestro proyecto entra en la etapa de definición, allí donde se lo presentamos al cliente o usuario final, sabiendo que funciona correctamente y responde a los requerimientos solicitados en su momento. Esta etapa es muy importante no sólo por representar la aceptación o no del proyecto por parte del cliente o usuario final sino por las múltiples dificultades que suele presentar en la práctica, alargándose excesivamente y provocando costos no previstos.
+</p>
+<h3>·  Ámbito general del ciclo de vida del SW </h3>
+<h4>Especificaciones: </h4>
+<p>Formalizamos los requerimientos; el documento obtenido en la etapa anterior se tomará como punto de partida para esta etapa.
+</p>
+<h4>Análisis: </h4>
+<p>Determinamos los elementos que intervienen en el sistema a desarrollar, su estructura, relaciones, evolución temporal, funcionalidades, tendremos una descripción clara de qué producto vamos a construir, qué funcionalidades aportará y qué comportamiento tendrá.
+</p>
+<h4>Diseño: </h4>
+<p>Ya sabemos qué hacer, ahora tenemos que determinar cómo debemos hacerlo (¿cómo debe ser construido el sistema en cuestion?; definimos en detalle entidades y relaciones de las bases de datos, seleccionamos el lenguaje que vamos a utilizar, el Sistema Gestor de Bases de Datos, etc.).</p>
+<h4>Implementación: </h4>
+<p>Empezamos a codificar algoritmos y estructuras de datos, de- finidos en las etapas anteriores, en el correspondiente lenguaje de programación o para un determinado sistema gestor de bases de datos. En muchos proyectos se pasa directamente a esta etapa; son proyectos muy arriesgados que adoptan un modelo de ciclo de vida de code & fix (codificar y corregir) donde se eliminan las etapas de especificaciones, análisis y diseño con la consiguiente pérdida de control sobre la gestión del proyecto.
+</p>
+<h4>Debugging: </h4>
+<p>El objetivo de esta etapa es garantizar que nuestro programa no contiene errores de diseño o codificación. En esta etapa no deseamos saber si nuestro programa realiza lo que solicitó el usuario, esa tarea le corresponde a la etapa de implementación. En ésta deseamos encontrar la mayor cantidad de errores. Todas los programas contienen errores: encontrarlos es cuestión de tiempo. Lo ideal es encontrar la mayoría, si no todos, en esta etapa. También se pueden agregar testeos de performance.
+</p>
+<h4>Validación: </h4>
+<p>Esta etapa tiene como objetivo la verificación de que el sistema desarrollado cumple con los requerimientos expresados inicialmente por el cliente y que han dado lugar al presente proyecto. En muchos proyectos las etapas de validación y debugging se realizan en paralelo por la estrecha relación que llevan. Sin embargo, tenemos que evitar la confusión: podemos realizarlos en paralelo, pero no como una única etapa.
+</p>
+<h4>Evolución: </h4>
+<p>En la mayoría de los proyectos se considera esta etapa como Mantenimiento y evolución, y se le asigna, no sólo el agregado de nuevas funcionalidades (evolución); sino la corrección de errores que surgen (mantenimiento). En la práctica esta denominación no es del todo errónea, ya que es posible que aun luego de una etapa de debugging y validación exhaustiva, se filtren errores.
+</p>
+<h4></h4>
+<p></p>
+<h3 class="mb-5">2.3  Modelos de desarrollo: tradicionales vs alternativos</h3>
+<h3>·  Modelo de proceso de SW  </h3>    
+<p>Hay varios modelos de procesos definidos en la bibliografía de Ingeniería del Software
+</p>
+<p>Cada modelo de proceso representa un proceso desde una perspectiva particular, por lo que sólo ofrece una información parcial sobre dicho proceso.
+</p>
+<h3>·  Modelos tradicionales </h3>   
+<h4>Modelo de Cascada
+</h4>
+<h6>Las fases están identificadas por separado: 
+</h6> 
+<p>-El análisis  y definición de requerimientos</p>
+<p>-Diseño del sistema y software.
+</p>
+<p>-Pruebas de implementación de unidades
+</p>
+<p>-Integración y pruebas del sistema 
+</p>
+<p>-Operación y mantenimiento 
+</p>
+<p>El principal inconveniente del modelo de la cascada es la dificultad de acomodar el cambio después de que está en marcha el proceso. En principio, una fase tiene que ser completada antes de pasar a la siguiente fase.
+</p>
+
+<h4>Desarrollo incremental
+</h4>
+<h6>Beneficios: 
+</h6>
+<p>El costo de atender las necesidades cambiantes de los clientes se reduce.</p>
+<p>-La cantidad de análisis y la documentación que tiene que ser hecho de nuevo es mucho menor que la que se requiere con el modelo de cascada. 
+</p>
+<p>Es más fácil obtener retroalimentación de los clientes en el trabajo de desarrollo que se ha hecho.
+</p>
+<p>-Los clientes pueden hacer comentarios sobre las manifestaciones del software y ver cuánto se ha implementado. 
+</p>
+<p>Más rápida entrega y despliegue de software de utilidad para el cliente es posible. 
+</p>
+<p>-Los clientes pueden usar y obtener valor a partir del software anterior que es posible con un proceso de cascada.
+</p>
+<h4>Espiral</h4>
+<img src="img/Imagen1.png" alt="">
+<p>Es un modelo de ciclo de vida desarrollado por Barry Boehm en 1988. 
+</p>
+<p>Las actividades de este modelo son una espiral, cada bucle es una actividad. 
+</p>
+<p>Las actividades no están fijadas a prioridad, sino que las siguientes se eligen en función del análisis de riesgo, comenzando por el bucle interior.
+</p>
+<p>En este modelo, el esfuerzo de desarrollo es iterativo. Tan pronto como uno completa un esfuerzo de desarrollo, otro comienza. Además, en cada desarrollo ejecutado, puedes seguir estos cuatros pasos.
+</p>
+<p>1. Determinar qué quieres lograr. 
+</p>
+<p>2. Determinar las rutas alternativas que puedes tomar para lograr estas metas. Por cada una, analizar los riesgos y resultados finales, y seleccionar la mejor. 
+</p>
+<p>3. Seguir la alternativa seleccionada en el paso 2. 	
+</p>
+<p>4. Establecer qué tienes terminado. 
+</p>
+<p>El Modelo Espiral mejora el Modelo de Cascada enfatizando la naturaleza iterativa del proceso de diseño. Eso introduce un ciclo de prototipo iterativo. En cada iteración, las nuevas expresiones que son obtenidas transformando otras dadas son examinadas para ver si representan progresos hacia el objetivo.  
+</p>
+<h3>·  Modelos ágiles </h3>   
+<h4>definición</h4>
+<p>Un proceso de software ágil debe adaptarse incrementalmente. Para lograr la adaptación incremental, un equipo ágil requiere retroalimentación con el cliente (de modo que sea posible hacer las adaptaciones apropiadas).
+  Un catalizador eficaz para la retroalimentación con el cliente es un prototipo operativo o una porción de un sistema operativo. – Qué estrategia se debe aplicar?
+  Este enfoque iterativo permite que el cliente evalúe en forma regular el incremento de software, dé la retroalimentación necesaria al equipo de software e influya en las adaptaciones del proceso que se realicen para aprovechar la retroalimentación.</p>
+</div>
     </section>
 </div>
 
