--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
         </div>
         <p class="lead mb-5">A continuación se muestran las clases vistas en Introducción a la Ingeniería en Software correspondientes a la UNIDAD 1 - 2</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://github.com/kennycaicedo">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+          <a href="https://twitter.com/78_caicedo">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#">
+          <a href="https://www.facebook.com/kenny.caicedobarzola">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
