--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#about">introducción</a>
+          <a class="nav-link js-scroll-trigger" href="#about">blog</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">unidad 1</a>
@@ -60,7 +60,8 @@
         <div class="subheading mb-5">Correo Institucional:
           <a href="kenny.caicedob@ug.edu.ec">kenny.caicedob@ug.edu.ec</a>
         </div>
-        <p class="lead mb-5">A continuación se muestran las clases vistas en Introducción a la Ingeniería en Software correspondientes a la UNIDAD 1 - 2</p>
+        <h1 class="mb-0">BLOG PERSONAL </h1>
+        <p class="lead mb-5">En las clases de Introducción a la Ingeniería en Software he aprendido muchas conceptualizaciones sobre el Proceso del Software, su ciclo de vida y los diferentes modelos de desarrollo con los que se pueden elaborar un Producto Sofware. A continuación les dejo las clases vistas en Introducción a la Ingeniería en Software correspondientes a la UNIDAD 1 - 2</p>
         <div class="social-icons">
           <a href="https://github.com/kennycaicedo">
             <i class="fab fa-github"></i>
