--- a/index.html
+++ b/index.html
@@ -44,7 +44,25 @@
           <a class="nav-link js-scroll-trigger" href="#experience">unidad 1</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#uno">1.1 fundamentos a la ingenieria de software</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#dos">1.2 proceso de la ingenieria de sofware</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#tres">1.3 sistemas de información</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">unidad 2</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#cuatro">2.1 proceso del software</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#cinco">2.2 el ciclo de vida del software</a>
+        </li>
+        <li class="nav-item">
+          <i class="nav-link js-scroll-trigger" href="#seis">2.3 modelos de desarrollo</i>
         </li>
       </ul>
     </div>
