--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a class="nav-link js-scroll-trigger" href="#experience">unidad 1</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#uno">1.1 fundamentos a la ingenieria de software</a>
+          <i class="nav-link js-scroll-trigger" href="#uno">1.1 fundamentos a la ingenieria de software</i>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#dos">1.2 proceso de la ingenieria de sofware</a>
