--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a class="nav-link js-scroll-trigger" href="#experience">unidad 1</a>
         </li>
         <li class="nav-item">
-          <p class="nav-link js-scroll-trigger" href="#uno">1.1 fundamentos a la ingenieria de software</p>
+          <a class="nav-link js-scroll-trigger" href="#uno">1.1 fundamentos a la ingenieria de software</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#dos">1.2 proceso de la ingenieria de sofware</a>
@@ -62,7 +62,7 @@
           <a class="nav-link js-scroll-trigger" href="#cinco">2.2 el ciclo de vida del software</a>
         </li>
         <li class="nav-item">
-          <i class="nav-link js-scroll-trigger" href="#seis">2.3 modelos de desarrollo</i>
+          <a class="nav-link js-scroll-trigger" href="#seis">2.3 modelos de desarrollo</a>
         </li>
       </ul>
     </div>
