--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">blog</a>
         </li>
-        <ul class="navbar-nav">
+        <ul class="nav">
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">unidad 1</a>
           <li class="nav-item">
+            <ul>
             <a class="nav-link js-scroll-trigger" href="#uno">1.1 fundamentos a la ingenieria de software</a>
           </li>
           <li class="nav-item">
@@ -51,9 +53,10 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#tres">1.3 sistemas de información</a>
           </li>
-        </ul>
-       
-        <ul class="nav-item">
+        </li>
+      </ul>
+      <ul>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">unidad 2</a>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#cuatro">2.1 proceso del software</a>
@@ -64,7 +67,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#seis">2.3 modelos de desarrollo</a>
           </li>
-        </ul>
+        </li>
+      </ul>
+      </ul>
         </ul>
         
     </div>
