--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">blog</a>
         </li>
-        <ul class="nav">
+        <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">unidad 1</a>
           <li class="nav-item">
