--- a/index.html
+++ b/index.html
@@ -40,22 +40,18 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">blog</a>
         </li>
-        <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">unidad 1</a>
           <li class="nav-item">
-            <ul>
-            <a class="nav-link js-scroll-trigger" href="#uno">1.1 fundamentos a la ingenieria de software</a>
+            <a class="nav-link js-scroll-trigger" href="#uno">1.1 fundamentos a la IS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#dos">1.2 proceso de la ingenieria de sofware</a>
+            <a class="nav-link js-scroll-trigger" href="#dos">1.2 proceso de la IS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#tres">1.3 sistemas de información</a>
           </li>
         </li>
-      </ul>
-      <ul>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">unidad 2</a>
           <li class="nav-item">
@@ -67,11 +63,8 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#seis">2.3 modelos de desarrollo</a>
           </li>
-        </li>
-      </ul>
-      </ul>
-        </ul>
-        
+        </li>     
+      </ul>     
     </div>
   </nav>
 
