--- a/index.html
+++ b/index.html
@@ -41,34 +41,21 @@
           <a class="nav-link js-scroll-trigger" href="#about">blog</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#cat">Catálogo de clases</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">unidad 1</a>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#uno">1.1 fundamentos a la IS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#dos">1.2 proceso de la IS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#tres">1.3 sistemas de información</a>
-          </li>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">unidad 2</a>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#cuatro">2.1 proceso del software</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#cinco">2.2 el ciclo de vida del software</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#seis">2.3 modelos de desarrollo</a>
-          </li>
         </li>     
       </ul>     
     </div>
   </nav>
 
   <div class="container-fluid p-0">
+
+
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
@@ -94,11 +81,28 @@
       </div>
     </section>
 
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="cat">
+      <div class="w-100">
+<h3>Clases de introducción a la INGENIERÍA en software</h3>
+<h3>UNIDAD 1</h3>
+<h2 href="#uno">1.1 fundamentos a la IS</h2>
+<h2 href="#dos">1.2 proceso de la IS</h2>
+<h2 href="#tres">1.3 sistemas de información</h2>
+<h3>UNIDAD 2</h3>
+<h2 href="#cuatro">2.1 proceso del software</h2>
+<h2 href="#cinco">2.2 el ciclo de vida del software</h2>
+<h2 href="#seis">2.3 modelos de desarrollo</h2>
+      </div>
+    </section>
+
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Unidad 1</h2>
+        <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="uno">
+          <div class="w-100">
+    
         <h3 >1.1 fundamentos de la ingeniría en software</h3>
         <h3 >·  definiciones y objetivos de la ingeniería de sofware</h3>
         <h4>Definición</h4>
@@ -148,6 +152,9 @@
 <h4>Líneas de productos software:</h4>
 <p>En lugar de productos individuales.</p>
 </div>
+</div>
+</section>
+
 <h3  class="mb-5"> 1.2 PROCESO de la ingeniría en software</h3>
 <h3>·  Factores de calidad del software </h3>
 <h4>Concepto de Calidad:</h4>
