--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="w-100">
 <h3>Clases de introducción a la INGENIERÍA en software</h3>
 <h3>UNIDAD 1</h3>
-<h2 href="#uno">1.1 fundamentos a la IS</h2>
+<a href="#uno">1.1 fundamentos a la IS</a>
 <h2 href="#dos">1.2 proceso de la IS</h2>
 <h2 href="#tres">1.3 sistemas de información</h2>
 <h3>UNIDAD 2</h3>
@@ -100,7 +100,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Unidad 1</h2>
-        <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="uno">
+        <section id="uno">
           <div class="w-100">
     
         <h3 >1.1 fundamentos de la ingeniría en software</h3>
