--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
       <div class="w-100">
 <h3>Clases de introducción a la INGENIERÍA en software</h3>
 <h3>UNIDAD 1</h3>
-<a href="#uno">1.1 fundamentos a la IS</a>
-<h2 href="#dos">1.2 proceso de la IS</h2>
-<h2 href="#tres">1.3 sistemas de información</h2>
+<a href="#uno">1.1 Fundamentos de la Ingeniería en Software</a>
+<a href="#dos">1.2 Proceso de la Ingeniería en Software</a>
+<a href="#tres">1.3 Sistemas de información</a>
 <h3>UNIDAD 2</h3>
-<h2 href="#cuatro">2.1 proceso del software</h2>
-<h2 href="#cinco">2.2 el ciclo de vida del software</h2>
-<h2 href="#seis">2.3 modelos de desarrollo</h2>
+<a href="#cuatro">2.1 proceso del software</a>
+<a href="#cinco">2.2 el ciclo de vida del software</a>
+<a href="#seis">2.3 modelos de desarrollo</a>
       </div>
     </section>
 
@@ -155,6 +155,8 @@
 </div>
 </section>
 
+<section id="dos">
+  <div class="w-100">
 <h3  class="mb-5"> 1.2 PROCESO de la ingeniría en software</h3>
 <h3>·  Factores de calidad del software </h3>
 <h4>Concepto de Calidad:</h4>
@@ -194,6 +196,12 @@
 <h4>Los ingenieros de software: </h4>
 <p>Deben aceptar que su labor implica responsabilidades mayores que la simple aplicación de habilidades técnicas.</p>
 <p>Deben comportarse de forma ética y moralmente responsable para ser respetado como un ingeniero profesional.</p>
+</div>
+</section>
+
+<section id="tres">
+  <div class="w-100">
+
 <h3 class="mb-5">1.3 Sistemas de información</h3>
 <h3>·  Concepto</h3>
 <p>Un sistema de información es un conjunto de elementos interrelacionados con el propósito de prestar atención a las demandas de información de una organización, para elevar el nivel de conocimientos que permitan un mejor apoyo a la toma de decisiones y desarrollo de acciones (Peña, 2006).</p>
@@ -213,6 +221,8 @@ Salida de Información: La salida es la capacidad de un Sistema de Información 
 <p>Mecanizadas: cuando cierta maquinaria realiza las principales funciones de procesamiento. Para los sistemas mecanizados que hacen uso de un computador, de acuerdo al tipo de interacción Hombre-Máquina, los sistemas de información pueden ser de dos tipos (Batch y en Línea]</p>
 <p>Procesos centralizados: los recursos se encuentran ubicados en un área física determinada, por lo que su acceso se realiza en las misma instalación o desde lugares retirados, mediante líneas de comunicación de datos (telefónicas, microondas, satélite, etc.).</p>
 <p>Proceso distribuido: los recursos se encuentran diseminados en diversos lugares de una zona territorial (ciudad, país, continente, etc.), por lo que el procesamiento se realiza en el propio lugar donde se originan los datos, existiendo la posibilidad de compartir información entre las diversas instalaciones, mediante la información de una “Red de Comunicación”.</p>
+</div>
+</section>
 
 </div>
     </section>
@@ -224,7 +234,9 @@ Salida de Información: La salida es la capacidad de un Sistema de Información 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
         <h2 class="mb-5">Unidad 2</h2>
-       <h3>2.1 Proceso del software</h3>
+        <section id="cuatro">
+          <div class="w-100">
+        <h3>2.1 Proceso del software</h3>
        <h3>·  definición de proceso de software</h3>
        <p>Un conjunto estructurado de actividades necesarias para desarrollar un sistema de software.</p>
        <p>Muchos de los procesos de software son diferentes, pero todos implican:      </p>
@@ -263,8 +275,11 @@ Salida de Información: La salida es la capacidad de un Sistema de Información 
       </p>
        <p>Esta norma no fomenta o especifica ningún modelo concreto de ciclo de vida, gestión del software o método de ingeniería, ni prescribe cómo realizar ninguna de las actividades
       </p>
-   
+    </div>
+  </section>
 
+  <section id="cinco">
+    <div class="w-100">
 
 <h3 class="mb-5">2.2 el ciclo de vida del software</h3>
        <h3>·  definición y etapas</h3>
@@ -301,6 +316,11 @@ Salida de Información: La salida es la capacidad de un Sistema de Información 
 </p>
 <h4></h4>
 <p></p>
+</div>
+</section>
+
+<section id="seis">
+  <div class="w-100">
 <h3 class="mb-5">2.3  Modelos de desarrollo: tradicionales vs alternativos</h3>
 <h3>·  Modelo de proceso de SW  </h3>    
 <p>Hay varios modelos de procesos definidos en la bibliografía de Ingeniería del Software
@@ -365,6 +385,9 @@ Salida de Información: La salida es la capacidad de un Sistema de Información 
   Un catalizador eficaz para la retroalimentación con el cliente es un prototipo operativo o una porción de un sistema operativo. – Qué estrategia se debe aplicar?
   Este enfoque iterativo permite que el cliente evalúe en forma regular el incremento de software, dé la retroalimentación necesaria al equipo de software e influya en las adaptaciones del proceso que se realicen para aprovechar la retroalimentación.</p>
 </div>
+</div>
+</section>
+
     </section>
 </div>
 
