--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
       <div class="w-100">
 <h3>Clases de introducción a la INGENIERÍA en software</h3>
 <h3>UNIDAD 1</h3>
-<a href="#uno">1.1 Fundamentos de la Ingeniería en Software</a>
-<a href="#dos">1.2 Proceso de la Ingeniería en Software</a>
-<a href="#tres">1.3 Sistemas de información</a>
+<li><a href="#uno">1.1 Fundamentos de la Ingeniería en Software</a></li>
+<li><a href="#dos">1.2 Proceso de la Ingeniería en Software</a></li>
+<li><a href="#tres">1.3 Sistemas de información</a></li>
 <h3>UNIDAD 2</h3>
-<a href="#cuatro">2.1 proceso del software</a>
-<a href="#cinco">2.2 el ciclo de vida del software</a>
-<a href="#seis">2.3 modelos de desarrollo</a>
+<li><a href="#cuatro">2.1 proceso del software</a></li>
+<li><a href="#cinco">2.2 el ciclo de vida del software</a></li>
+<li><a href="#seis">2.3 modelos de desarrollo</a></li>
       </div>
     </section>
 
