--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           <a href="kenny.caicedob@ug.edu.ec">kenny.caicedob@ug.edu.ec</a>
         </div>
         <h1 class="mb-0">BLOG PERSONAL </h1>
+        <p class="lead mb-5">La ingeniería de software es una aplicación práctica del conocimiento científico para proveer metodologías y técnicas que ayuden a desarrollar sistemas de software a tiempo, y a su vez que aseguren que el desarrollador cumpla con las expectativas de calidad y permanezca dentro del presupuesto.</p>
         <p class="lead mb-5">En las clases de Introducción a la Ingeniería en Software he aprendido muchas conceptualizaciones sobre el Proceso del Software, su ciclo de vida y los diferentes modelos de desarrollo con los que se pueden elaborar un Producto Sofware. A continuación les dejo las clases vistas en Introducción a la Ingeniería en Software correspondientes a la UNIDAD 1 - 2</p>
         <div class="social-icons">
           <a href="https://github.com/kennycaicedo">
@@ -89,9 +90,9 @@
 <li><a href="#dos">1.2 Proceso de la Ingeniería en Software</a></li>
 <li><a href="#tres">1.3 Sistemas de información</a></li>
 <h3>UNIDAD 2</h3>
-<li><a href="#cuatro">2.1 proceso del software</a></li>
-<li><a href="#cinco">2.2 el ciclo de vida del software</a></li>
-<li><a href="#seis">2.3 modelos de desarrollo</a></li>
+<li><a href="#cuatro">2.1 Proceso del software</a></li>
+<li><a href="#cinco">2.2 El ciclo de vida del software</a></li>
+<li><a href="#seis">2.3 Modelos de desarrollo</a></li>
       </div>
     </section>
 
